--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+	"experimentalDecorators" : true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", ".d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
